# cxxcompat

./: .gitignore  CMakeLists.txt  README.md
include/cxxcompat/: chrono  chrono.h  cxxcompat_config.h  memory  memory.h  optional  optional.h  override  override.h  string.h  type_traits  type_traits.h  type_traits_cxx14.h
licenses/: LLVM.txt
tests/: test_chrono.cxx  test_memory.cxx  test_optional.cxx  test_override.cxx  test_string.cxx  test_type_traits.cxx
